Fixing overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -407,6 +407,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 #media,
 section {
